--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,6 +70,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
+        upload_url: ${{ steps.get_release.outputs.upload_url }}
         asset_path: ./Mouny-${{ steps.manifest.outputs.version }}.zip
         asset_name: Mouny-${{ steps.manifest.outputs.version }}.zip
         asset_content_type: application/zip
