--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,14 +63,28 @@ jobs:
           echo "Download link is updated to the new version in the system.json"
         fi
     
-    # Upload the release asset
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
+    # Create a new release
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.get_release.outputs.upload_url }}
-        asset_path: ./Mouny-${{ steps.manifest.outputs.version }}.zip
-        asset_name: Mouny-${{ steps.manifest.outputs.version }}.zip
+        tag_name: ${{ steps.manifest.outputs.version }}
+        release_name: ${{ steps.manifest.outputs.version }}
+        body: |
+          **Full Changelog**: ${{ steps.get_release.outputs.html_url }}/compare/${{ steps.get_release.outputs.tag_name }}...${{ steps.manifest.outputs.version }}
+        draft: false
+        prerelease: false
+      
+    # Upload the release asset
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./Mouny-$VERSION.zip
+        asset_name: Mouny-$VERSION.zip
         asset_content_type: application/zip
