--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
         tag_name: ${{ steps.manifest.outputs.version }}
         release_name: ${{ steps.manifest.outputs.version }}
         body: |
-          **Full Changelog**: ${{ steps.get_release.outputs.html_url }}/compare/${{ steps.get_release.outputs.tag_name }}...${{ steps.manifest.outputs.version }}
+          **Full Changelog**: https://github.com/BryanFRD/Mouny/compare/${{ steps.get_release.outputs.tag_name }}...${{ steps.manifest.outputs.version }}
         draft: false
         prerelease: false
       
